--- a/main.scss
+++ b/main.scss
@@ -17,7 +17,7 @@ ul {
 
 hr {
     width: 90%;
-    margin: 40px 0 20px 0;
+    margin: 30px 0 20px 0;
     border: solid rgb(207, 207, 207);
     border-width: 1px 0 0 0 ;
 }
@@ -108,16 +108,15 @@ header {
     a {
         color:rgb(59, 59, 59);
     }
-}
-
-.fa-user {
-    text-align: center;
-    background-color: rgb(170, 170, 170);
-    font-size: 15px;
-    margin-right: 10px;
-    padding: 6px;
-    border-radius: 10%;
-    color: white;
+    .fa-user {
+        text-align: center;
+        background-color: rgb(170, 170, 170);
+        font-size: 15px;
+        margin-right: 10px;
+        padding: 6px;
+        border-radius: 10%;
+        color: white;
+    }
 }
 
 .signin:hover i {
@@ -239,6 +238,7 @@ header {
     h2 {
         font-size: 20px;
         font-weight: 400;
+        margin-bottom: 15px;
     }
     a {
         font-size: 16px;
@@ -246,6 +246,45 @@ header {
         color: rgb(54, 54, 54);
         &:hover {
             text-decoration: underline;
+        }
+    }
+}
+
+.search-class {
+    i {
+        width: 20px;
+        text-align: center;
+        margin-right: 5px;
+        font-size: 3px;
+    }
+}
+
+.fashion-class {
+    li {
+        margin-bottom: 10px;
+    }
+    a:hover {
+            opacity: .75;
+    }
+    img {
+        width: 38px;
+        height: 38px;
+        object-fit:cover;
+        border: rgb(214, 214, 214) solid 1px;
+        border-radius: 50%;
+    }
+    .blogger-list {
+        font-size: 15px;
+        display: flex;
+        i {
+            font-weight: 200;
+            margin-right: 3px;
+        }
+        .blogger-detail {
+            margin-left: 5px;
+            .blogger {
+                font-weight: 600;
+            }
         }
     }
 }
@@ -283,7 +322,7 @@ header {
 
 .card {
     width: 400px;
-    height: 450px;
+    height: 600px;
     margin: 0 0 18px 18px;
     border: solid 1px rgb(224, 224, 224);
     border-radius: 3px;
@@ -293,5 +332,21 @@ header {
     }
     a:hover {
         opacity: .7;
+    }
+}
+
+.see-more {
+    font-weight: 600;
+    color: rgb(124, 124, 124);
+    background-color: #ffffff;
+    border: solid rgb(212, 212, 212) 1px;
+    border-radius: 2px;
+    padding: 5px 10px;
+    margin-left: 70px;
+    margin-top: 10px;
+    font-size: 17px;
+    &:hover {
+        color:rgb(170, 170, 170);
+        cursor: pointer;
     }
 }
