--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   -webkit-box-sizing: border-box;
@@ -14,17 +15,6 @@ li {
 
 ul {
   padding: 0;
-}
-
-hr {
-  width: 90%;
-  margin: 30px 0 20px 0;
-  border: solid #cfcfcf;
-  border-width: 1px 0 0 0;
-}
-
-header {
-  display: sticky;
 }
 
 .box {
@@ -49,6 +39,10 @@ header {
 }
 
 .nav-sec {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 100;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 1px 5px 1px #959292;
           box-shadow: 0px 1px 5px 1px #959292;
@@ -147,6 +141,7 @@ header {
   height: 50px;
   border-bottom: solid #dad9d9;
   border-bottom-width: thin;
+  margin-top: 60px;
 }
 
 .container {
@@ -284,6 +279,18 @@ header {
   text-decoration: underline;
 }
 
+.sidebar hr {
+  width: 90%;
+  margin: 30px 0 20px 0;
+  border: solid #cfcfcf;
+  border-width: 1px 0 0 0;
+}
+
+.sidebar .see-more {
+  margin-left: 70px;
+  margin-top: 10px;
+}
+
 .search-class i {
   width: 20px;
   text-align: center;
@@ -299,7 +306,7 @@ header {
   opacity: .75;
 }
 
-.fashion-class img {
+img.round {
   width: 38px;
   height: 38px;
   -o-object-fit: cover;
@@ -308,29 +315,84 @@ header {
   border-radius: 50%;
 }
 
-.fashion-class .blogger-list {
-  font-size: 15px;
+.blogger-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  font-size: 5px;
 }
 
-.fashion-class .blogger-list i {
+.blogger-list i {
   font-weight: 200;
   margin-right: 3px;
 }
 
-.fashion-class .blogger-list .blogger-detail {
+.blogger-detail {
   margin-left: 5px;
 }
 
-.fashion-class .blogger-list .blogger-detail .blogger {
+.blogger-detail .blogger {
   font-weight: 600;
+}
+
+.follow {
+  color: #ffffff;
+  border: solid 1px #1e72a3;
+  border-radius: 2px;
+  background-color: #217db3;
+  padding: 3px 20px;
+  font-weight: 500;
+  margin: 8px 0;
+}
+
+.follow:hover {
+  opacity: .75;
+  cursor: pointer;
+}
+
+.fa-user-plus {
+  font-size: 5px;
+  font-weight: 200;
 }
 
 .content {
   width: 820px;
   float: right;
+}
+
+.content hr {
+  margin: 20px 0;
+  width: 100%;
+  border: solid #cfcfcf;
+  border-width: 1px 0 0 0;
+}
+
+.content p {
+  font-weight: 400;
+  font-size: 20px;
+  color: #2b2929;
+}
+
+.content ul {
+  margin-bottom: 50px;
+}
+
+.content li {
+  font-size: 15px;
+  margin: 10px 0;
+}
+
+.content li::before {
+  content: "‧";
+  color: gray;
+}
+
+.content li a {
+  color: #2490D0;
+}
+
+.content .see-more {
+  margin-left: 725px;
 }
 
 .title {
@@ -368,20 +430,57 @@ header {
 }
 
 .card {
-  width: 400px;
-  height: 600px;
+  width: 260px;
+  height: 390px;
   margin: 0 0 18px 18px;
   border: solid 1px #e0e0e0;
   border-radius: 3px;
   overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-size: 10px;
+}
+
+.card a {
+  max-height: 88%;
+  overflow: hidden;
 }
 
 .card img {
-  max-width: 400px;
+  max-width: 260px;
 }
 
 .card a:hover {
   opacity: .7;
+}
+
+.large {
+  width: 400px;
+  height: 600px;
+}
+
+.large img {
+  max-width: 400px;
+}
+
+.card-detail {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: auto 10px;
+  height: 60px;
+}
+
+.card-detail img {
+  margin: auto 0 auto 0;
 }
 
 .see-more {
@@ -391,13 +490,89 @@ header {
   border: solid #d4d4d4 1px;
   border-radius: 2px;
   padding: 5px 10px;
-  margin-left: 70px;
-  margin-top: 10px;
   font-size: 17px;
 }
 
 .see-more:hover {
   color: #aaaaaa;
   cursor: pointer;
+}
+
+.banner {
+  width: 100%;
+  height: 250px;
+  background-color: #e9e9e9;
+  overflow: hidden;
+  margin: 50px 0;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  line-height: 25px;
+  color: #3d3d3d;
+}
+
+.banner img {
+  width: 330px;
+}
+
+.banner a {
+  display: inline-block;
+  margin-right: 10px;
+  width: 150px;
+}
+
+.banner a img {
+  width: 150px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.banner h3 {
+  margin-top: 30px;
+  font-size: 28px;
+  font-weight: 400;
+}
+
+.banner p {
+  margin: 20px 0;
+  font-size: 16px;
+}
+
+.app {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.app a:not(:last-child):hover {
+  opacity: .75;
+}
+
+.app a:last-child {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 150px;
+  height: 45px;
+  color: #2490D0;
+  border: solid 1px #2490D0;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.app a:last-child:hover {
+  background-color: white;
 }
 /*# sourceMappingURL=main.css.map */
