--- a/main.scss
+++ b/main.scss
@@ -5,6 +5,7 @@
 
 a {
     text-decoration: none;
+
 }
 
 li {
@@ -15,18 +16,8 @@ ul {
     padding: 0;
 }
 
-hr {
-    width: 90%;
-    margin: 30px 0 20px 0;
-    border: solid rgb(207, 207, 207);
-    border-width: 1px 0 0 0 ;
-}
 
 ///////////header section///////////////
-
-header {
-    display: sticky;
-}
 
 .box {
     width: 55%;
@@ -41,6 +32,10 @@ header {
 }
 
 .nav-sec {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 100;
     background-color: #ffffff;
     box-shadow: 0px 1px 5px 1px rgb(149, 146, 146);
 }
@@ -131,6 +126,7 @@ header {
     height: 50px;
     border-bottom: solid rgb(218, 217, 217);
     border-bottom-width: thin;
+    margin-top: 60px;
 }
 
 .container {
@@ -248,6 +244,16 @@ header {
             text-decoration: underline;
         }
     }
+    hr {
+        width: 90%;
+        margin: 30px 0 20px 0;
+        border: solid rgb(207, 207, 207);
+        border-width: 1px 0 0 0 ;
+    }
+    .see-more{
+        margin-left: 70px;
+        margin-top: 10px;    
+    }
 }
 
 .search-class {
@@ -266,32 +272,88 @@ header {
     a:hover {
             opacity: .75;
     }
-    img {
-        width: 38px;
-        height: 38px;
-        object-fit:cover;
-        border: rgb(214, 214, 214) solid 1px;
-        border-radius: 50%;
-    }
-    .blogger-list {
-        font-size: 15px;
-        display: flex;
-        i {
-            font-weight: 200;
-            margin-right: 3px;
-        }
-        .blogger-detail {
-            margin-left: 5px;
-            .blogger {
-                font-weight: 600;
-            }
-        }
+}
+
+img.round {
+    width: 38px;
+    height: 38px;
+    object-fit: cover;
+    border: rgb(214, 214, 214) solid 1px;
+    border-radius: 50%;
+}
+
+
+.blogger-list {
+    display: flex;
+    font-size: 5px;
+    i {
+        font-weight: 200;
+        margin-right: 3px;
     }
 }
+
+.blogger-detail {
+    margin-left: 5px;
+    .blogger {
+        font-weight: 600;
+    }
+}
+
+.follow {
+    color: #ffffff;
+    border: solid 1px #1e72a3;
+    border-radius: 2px;
+    background-color: rgb(33, 125, 179);
+    padding: 3px 20px;
+    font-weight: 500;
+    margin: 8px 0;
+    &:hover {
+        opacity: .75;
+        cursor: pointer;
+    }
+}
+
+.fa-user-plus {
+    font-size: 5px;
+    font-weight: 200;
+}
+
+
+
+////////content//////////
+
 
 .content {
     width: 820px;
     float: right;
+    hr {
+        margin: 20px 0;
+        width: 100%;
+        border: solid rgb(207, 207, 207);
+        border-width: 1px 0 0 0 ;
+    }
+    p {
+        font-weight: 400;
+        font-size: 20px;
+        color: rgb(43, 41, 41);
+    }
+    ul {
+        margin-bottom: 50px;
+    }
+    li {
+        font-size: 15px;
+        margin: 10px 0;  
+        &::before {
+            content: "‧";
+            color: gray;
+        }
+        a {
+            color: #2490D0;
+        }
+    }
+    .see-more {
+        margin-left: 725px;
+    }
 }
 
 .title {
@@ -321,17 +383,42 @@ header {
 }
 
 .card {
-    width: 400px;
-    height: 600px;
+    width: 260px;
+    height: 390px;
     margin: 0 0 18px 18px;
     border: solid 1px rgb(224, 224, 224);
     border-radius: 3px;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    font-size: 10px;
+    a {
+        max-height: 88%;
+        overflow: hidden;
+    }
     img {
-        max-width: 400px;
+        max-width: 260px;
     }
     a:hover {
         opacity: .7;
+    }
+}
+
+.large {
+    width: 400px;
+    height: 600px;
+    img {
+        max-width: 400px;
+    }
+}
+
+.card-detail {
+    display: flex;
+    justify-content: space-between;
+    margin: auto 10px;
+    height: 60px;
+    img {
+        margin: auto 0 auto 0;
     }
 }
 
@@ -342,11 +429,67 @@ header {
     border: solid rgb(212, 212, 212) 1px;
     border-radius: 2px;
     padding: 5px 10px;
-    margin-left: 70px;
-    margin-top: 10px;
     font-size: 17px;
     &:hover {
         color:rgb(170, 170, 170);
         cursor: pointer;
+    }
+}
+
+.banner {
+    width: 100%;
+    height: 250px;
+    background-color: rgb(233, 233, 233);
+    overflow: hidden;
+    margin: 50px 0;
+    justify-content: center;
+    line-height: 25px;
+    color:#3d3d3d;
+    img {
+        width: 330px;
+    }
+    a {
+        display: inline-block;
+        margin-right: 10px;
+        width: 150px;
+        img {
+        width: 150px;
+        object-fit: contain;
+        }
+    }
+    h3 {
+        margin-top: 30px;
+        font-size: 28px;
+        font-weight: 400;
+    }
+    p {
+        margin: 20px 0;
+        font-size: 16px;
+    }
+}
+
+.app {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    a {
+        &:not(:last-child):hover{
+            opacity: .75;
+
+        }
+        &:last-child {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 150px;
+            height: 45px;
+            color:#2490D0;
+            border: solid 1px #2490D0;
+            border-radius: 5px;
+            font-size: 16px;
+                &:hover {
+                background-color: white;
+                }
+        }
     }
 }
