--- a/main.scss
+++ b/main.scss
@@ -20,7 +20,7 @@ ul {
 ///////////header section///////////////
 
 .box {
-    width: 55%;
+    max-width: 1000px;
     margin: 0 auto 0 auto;
 }
 
@@ -71,6 +71,7 @@ ul {
     border-style: none;
     background-color:#f3f1f1;
     width: 85%;
+    height: 30px;
 }
 
 .fa-search {
@@ -326,6 +327,8 @@ img.round {
 .content {
     width: 820px;
     float: right;
+    display: flex;
+    flex-direction: column;
     hr {
         margin: 20px 0;
         width: 100%;
@@ -352,7 +355,8 @@ img.round {
         }
     }
     .see-more {
-        margin-left: 725px;
+        align-self: flex-end;
+        padding: 10px 20px;
     }
 }
 
@@ -492,4 +496,61 @@ img.round {
                 }
         }
     }
+}
+
+
+//////////footer//////////////
+
+
+footer {
+    color: rgb(90, 90, 90);
+    font-size: 16px;
+    font-weight: 400;
+    width: 1000px;
+    margin: 0 auto 50px;
+    line-height: 30px;
+    hr {
+        margin: 5px 0;
+        border-top: solid 1px rgb(212, 212, 212);
+    }
+    a {
+        color: rgb(90, 90, 90);
+        font-size: 16px;
+        font-weight: 400;
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+    i {
+        display: inline-block;
+        width: 20px;
+        color:rgb(153, 152, 152);
+        font-size: 15px;
+    }
+}
+
+.separate {
+    border-left: solid 1px rgb(212, 212, 212);
+    height: 200px;
+}
+
+.bottom-about {
+    align-items: flex-start;
+    margin-bottom: 20px;
+}
+
+.bottom-nav {
+    margin: 10px 0;
+    ul {
+        display: flex;
+        li:not(:last-child)::after {
+            content:"";
+            border-left: solid 1px rgb(212, 212, 212);
+            margin: 0 15px; 
+        }
+    }
+}
+
+.right-reserved {
+    margin: 20px 0;
 }
