--- a/main.css
+++ b/main.css
@@ -146,7 +146,7 @@ ul {
 }
 
 .container {
-  width: 55%;
+  width: 1000px;
   margin: 0 auto 0 auto;
 }
 
@@ -164,7 +164,7 @@ ul {
 
 .container li {
   margin: 0;
-  width: 20%;
+  width: 200px;
   text-align: center;
   line-height: 48px;
 }
@@ -598,6 +598,7 @@ footer {
 footer hr {
   margin: 5px 0;
   border-top: solid 1px #d4d4d4;
+  border-width: 1px 0 0 0;
 }
 
 footer a {
