--- a/main.scss
+++ b/main.scss
@@ -131,7 +131,7 @@ ul {
 }
 
 .container {
-    width: 55%;
+    width: 1000px;
     margin: 0 auto 0 auto;
     ul{
         width: 80%;
@@ -142,7 +142,7 @@ ul {
     }
     li {
         margin: 0;
-        width: 20%;
+        width: 200px;
         text-align: center;
         line-height: 48px;
         .current-class {
@@ -512,6 +512,7 @@ footer {
     hr {
         margin: 5px 0;
         border-top: solid 1px rgb(212, 212, 212);
+        border-width: 1px 0 0 0 ;
     }
     a {
         color: rgb(90, 90, 90);
